add missing stuff for frontend
